--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   loading_indicator: ^3.1.1
   openid_client: ^0.4.8
   rdflib: ^0.2.8
-  solid_auth: ^0.1.13
+  # solid_auth: ^0.1.13
   url_launcher: ^6.2.2
 
 dev_dependencies:
