--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.2
   jwt_decoder: ^2.0.1
+  jose: ^0.3.4
   loading_indicator: ^3.1.1
   openid_client: ^0.4.8
   rdflib: ^0.2.8
