--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   loading_indicator: ^3.1.1
   openid_client: ^0.4.8
   rdflib: ^0.2.8
-  # solid_auth: ^0.1.13
   url_launcher: ^6.2.2
+  openidconnect_web: ^1.0.22
 
 dev_dependencies:
   dart_code_metrics:
